--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ packages = [{include = "chatgpt_test_generator"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 pytest = "^7.2.2"
+toml = "^0.10.2"
+openai = "^0.27.2"
 
 
 [build-system]
